--- a/packaging/windows/product.wxs
+++ b/packaging/windows/product.wxs
@@ -4,7 +4,7 @@
     <Package InstallerVersion="500" Compressed="yes" InstallScope="perMachine"/>
     <MediaTemplate/>
     <Directory Id="TARGETDIR" Name="SourceDir">
-      <Directory Id="ProgramFilesFolder">
+      <Directory Id="ProgramFiles64Folder">
         <Directory Id="INSTALLFOLDER" Name="expressor"/>
       </Directory>
     </Directory>
